lib/tests/snapshots/integration__tests__all_covered.snap
---
source: lib/tests/integration.rs
expression: output
---
Lines: 100.0% | Regions: 100.0% | Functions: 100.0%
