lib/tests/snapshots/integration__tests__no_test_coverage.snap
---
source: lib/tests/integration.rs
expression: output
---
# Code Coverage

## Coverage Summary
Lines: 12.5% | Regions: 22.2% | Functions: 50.0%
