lib/tests/snapshots/integration__tests__real1_all.snap
---
source: lib/tests/integration.rs
expression: output
---
Lines: 70.4% | Regions: 70.4% | Functions: 100.0%
