lib/tests/snapshots/integration__tests__show_missing_lines.snap
---
source: lib/tests/integration.rs
expression: output
---
src/lib.rs:7-9 UNCOVERED
Lines: 72.7% | Regions: 57.1% | Functions: 80.0%
