lib/tests/snapshots/integration__tests__summary_only_no_segments.snap
---
source: lib/tests/integration.rs
expression: output
---
# Code Coverage

## Coverage Summary
Lines: 57.1% | Regions: 61.5% | Functions: 100.0%
